fix text alignment and sizing

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@ body {
     width: 100%;
     height: 100%;
     background: rgb(48, 48, 48);
+    font-size: 16px;
+    font-family: monospace;
 }
 
 .cover {
@@ -24,27 +26,32 @@ body {
 
 .list {
     max-height: 75%;
+    overflow-y: auto;
 }
 
 .link-item {
     overflow: hidden;
     margin-top: 15px;
+    height: 140px;    
 }
 
 .item-thumbnail img {
     max-width: 140px;
 }
 
-.link-text {
+.link-text, .arrow {
     color: white;
-    font-size: 3em;
-    font-family: monospace;
-    margin-top: 37px;
+    display: table;
+    height: 100%;
+    font-size: 250%;
 }
 
-.arrow {
-    color: white;
-    font-size: 3em;
-    /* font-family: monospace; */
-    margin-top: 47px;
+.link-text span {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.arrow span {
+    display: table-cell;
+    vertical-align: middle;
 }
